--- a/public/modules/sidebar/views/sidebar.html
+++ b/public/modules/sidebar/views/sidebar.html
@@ -12,7 +12,16 @@
         <li class="active">
           <a href="#/">
             <i class="fa fa-dashboard"></i> <span>City</span>
-            
+          </a>
+        </li>
+        <li >
+          <a href="#/addDump">
+            <i class="fa fa-dashboard"></i> <span>Add Dump Yard</span>
+          </a>
+        </li>
+        <li >
+          <a href="#/addGC">
+            <i class="fa fa-dashboard"></i> <span>Add Garbage Collection Point</span>
           </a>
         </li>
       </ul>
