--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 	<script src="/javascripts/constants.js" type="text/javascript"></script>
 	
 	<script src="/javascripts/js/ng-map.min.js" type="text/javascript"></script>
-	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCNZNdJlTb16L5qMi1WJWSWbPvUMeDlSIE&libraries=places"></script>
+	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCNZNdJlTb16L5qMi1WJWSWbPvUMeDlSIE&libraries=placeses,visualization,drawing,geometry,places"></script>
 	<!--<script src="/javascripts/js/autocomplete.js"></script>-->
 	<!--<script src="/javascripts/js/angucomplete-alt.js"></script>-->
 	<script src="/directives/google.js" type="text/javascript"></script>
@@ -65,6 +65,8 @@
 	<!--Controllers-->
 	<script src="/modules/city/controller.js" type="text/javascript"></script>
 	<script src="/modules/main/controller.js" type="text/javascript"></script>
+	<script src="/modules/dumpYard/controller.js" type="text/javascript"></script>
+	<script src="/modules/garbageCollection/controller.js" type="text/javascript"></script>
 
 	<!--services-->
 	<!--<script src="/modules/city/service.js" type="text/javascript"></script>-->
