--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
 	<link rel="stylesheet" href="/stylesheets/ng-table.css">
 	<link rel="stylesheet" href="/stylesheets/custom.css">
 	<link rel="stylesheet" href="/font/font-awesome.css">
+	<link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -52,6 +53,7 @@
 	<script src="/javascripts/js/angular-ui-router.min.js" type="text/javascript"></script>
 	<script src="/javascripts/js/jquery-2.2.3.min.js" type="text/javascript"></script>
 	<script src="/javascripts/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="/javascripts/js/ng-table.min.js"></script>
 	<script src="/app.js" type="text/javascript"></script>
 	<script src="/javascripts/constants.js" type="text/javascript"></script>
 	
@@ -65,6 +67,7 @@
 	<!--Controllers-->
 	<script src="/modules/city/controller.js" type="text/javascript"></script>
 	<script src="/modules/main/controller.js" type="text/javascript"></script>
+	<script src="/modules/vehicle/controller.js" type="text/javascript"></script>
 
 	<!--services-->
 	<!--<script src="/modules/city/service.js" type="text/javascript"></script>-->
