--- a/public/modules/sidebar/views/sidebar.html
+++ b/public/modules/sidebar/views/sidebar.html
@@ -24,6 +24,16 @@
             <i class="fa fa-dashboard"></i> <span>Add Garbage Collection Point</span>
           </a>
         </li>
+        <li >
+          <a ui-sref="users">
+            <i class="fa fa-dashboard"></i> <span>Users</span>
+          </a>
+        </li>
+         <li >
+          <a ui-sref="addvehicle">
+            <i class="fa fa-dashboard"></i> <span>Add Vehicles</span>
+          </a>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
