--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
 	<script src="/modules/dumpYard/controller.js" type="text/javascript"></script>
 	<script src="/modules/garbageCollection/controller.js" type="text/javascript"></script>
 
-
+	<script src="/modules/user/controller.js" type="text/javascript"></script>
 	<!--services-->
 	<!--<script src="/modules/city/service.js" type="text/javascript"></script>-->
 
