--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
 	<script src="/javascripts/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="/javascripts/js/ng-table.min.js"></script>
 	<script src="/app.js" type="text/javascript"></script>
-	<script src="/javascripts/constants.js" type="text/javascript"></script>
+	<!--<script src="/javascripts/constants.js" type="text/javascript"></script>-->
 	
 	<script src="/javascripts/js/ng-map.min.js" type="text/javascript"></script>
 	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCNZNdJlTb16L5qMi1WJWSWbPvUMeDlSIE&libraries=placeses,visualization,drawing,geometry,places"></script>
