--- a/public/modules/dumpYard/views/dumpYard.html
+++ b/public/modules/dumpYard/views/dumpYard.html
@@ -21,25 +21,26 @@
                     </div>
                     
                      <div class="row">
-                        <ng-map center="{{pinlat}}, {{pinlng}}" zoom="13" style="display: block;min-height: 550px">
+                        <ng-map center="{{pinlat}}, {{pinlng}}" zoom="13">
+                            <!--<info-window id="foo-iw">-->
+                            <!--     <div ng-non-bindable="">-->
+                            <!--         <br/>Address: {{currentDump.name}}-->
+                            <!--         <br/><a  ng-click="delDump(shopData)">Delete Dump yard location</a>-->
+                            <!--     </div>-->
+                            <!-- </info-window>-->
                              <marker ng-if="showNewMarker.val" position="{{pinlat}}, {{pinlng}}" 
                              draggable="true"
                              on-dragstart="dragStart()"
                              on-dragend="dragEnd()"
                              title="New Dump Yard"
                              ></marker>
-                             <marker ng-repeat="dumpYard in dumpYards"
+                             <marker ng-repeat="dumpYard in $root.city.dumpYards"
                                      position="{{dumpYard.lat}}, {{dumpYard.long}}"
                                      draggable="false"
                                      title="{{dumpyard.name}}"
                                      on-click="showDetail(dumpYard)">
                              </marker>
-                             <info-window id="foo-iw">
-                                 <div>
-                                     <br/>Address: {{currentDump.name}}
-                                     <br/><a  ng-click="delDump(shopData)">Delete Dump yard location</a>
-                                 </div>
-                             </info-window>
+                             
                         </ng-map>
                      </div>
                 </div>
@@ -47,3 +48,36 @@
         </div>
     </section>
 </div>
+
+
+<div class="modal fade" id="agencyModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Invite an agency</h4>
+            </div>
+            <form name="addAgency" novalidate>
+                <div class="modal-body">
+                     <div class="clearfix row-10">
+                        <div class="mob-grid-6">
+                            <div class="form-group">
+                              <label class="labelColor">Address:</label>
+                            </div>
+                        </div>
+                        <div class="mob-grid-6 no-circle">
+                            <div class="form-group">
+                                <label class="labelColor">{{currentDump.name}}</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"> Close</button>
+                    <button type="button" class="btn btn-danger" ng-click="delDump()" ng-disabled="addAgency.$invalid"><i class="fa fa-times" ></i> Delete Dump Yard</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
