--- a/public/modules/garbageCollection/views/garbageCollection.html
+++ b/public/modules/garbageCollection/views/garbageCollection.html
@@ -10,29 +10,79 @@
         <div class="box">
             <div class="content clearfix">
                 <div>
-                    <div class="row">
-                        Enter an address: <br/>
-                       <input places-auto-complete size=80
-                       ng-model="address"
-                       component-restrictions="{country:'in'}"
-                       on-place-changed="placeChanged()" />
-                       <span class="help-block">**drag the pin in case you want to change the location</span>
+                    <div class="row" style="padding:10px;">
+                        Enter a Location to add a new garbage collection point and click save button after adjusting the location of markerr: <br/>
+                        <input places-auto-complete size=80
+                        ng-model="address"
+                        component-restrictions="{country:'in'}"
+                        on-place-changed="placeChanged()" />
+                        <span class="help-block">**drag the pin in case you want to adjust the location</span>
+                        <select ng-model="vehicle" required>
+                            <option value="">Please select a vehicle</option>
+                            <option value="{{vcl}}" ng-repeat="vcl in vehicles">
+                                {{vcl.name}} - {{vcl.type}}
+                            </option>
+                        </select>
+                        <button class= "btn btn-info" ng-click="saveGC()">Save Garbage Collection Point</button>
                     </div>
                     
                      <div class="row">
-                       <ng-map center="{{pinlat}}, {{pinlng}}" zoom="13">
-                   
-                         <marker position="{{pinlat}}, {{pinlng}}" 
-                         draggable="true"
-                         on-dragstart="dragStart()"
-                         on-dragend="dragEnd()"
-                         title="Hello World!"
-                         ></marker>
-                   
-                       </ng-map>
+                        <ng-map center="{{pinlat}}, {{pinlng}}" zoom="13">
+                            <!--<info-window id="foo-iw">-->
+                            <!--     <div ng-non-bindable="">-->
+                            <!--         <br/>Address: {{currentGC.name}}-->
+                            <!--         <br/><a  ng-click="delDump(shopData)">Delete Dump yard location</a>-->
+                            <!--     </div>-->
+                            <!-- </info-window>-->
+                             <marker ng-if="showNewMarker.val" position="{{pinlat}}, {{pinlng}}" 
+                             draggable="true"
+                             on-dragstart="dragStart()"
+                             on-dragend="dragEnd()"
+                             title="New Dump Yard"
+                             ></marker>
+                             <marker ng-repeat="collectionCenters in $root.city.collectionCenters"
+                                     position="{{collectionCenters.lat}}, {{collectionCenters.long}}"
+                                     draggable="false"
+                                     title="{{collectionCenters.name}}"
+                                     on-click="showDetail(collectionCenters)">
+                             </marker>
+                             
+                        </ng-map>
                      </div>
                 </div>
             </div>
         </div>
     </section>
+</div>
+
+
+<div class="modal fade" id="agencyModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Invite an agency</h4>
+            </div>
+            <form name="addAgency" novalidate>
+                <div class="modal-body">
+                     <div class="clearfix row-10">
+                        <div class="mob-grid-6">
+                            <div class="form-group">
+                              <label class="labelColor">Address:</label>
+                            </div>
+                        </div>
+                        <div class="mob-grid-6 no-circle">
+                            <div class="form-group">
+                                <label class="labelColor">{{currentGC.name}}</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"> Close</button>
+                    <button type="button" class="btn btn-danger" ng-click="delGC()" ng-disabled="addAgency.$invalid"><i class="fa fa-times" ></i> Delete Garbage Colllection Point</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
