--- a/public/modules/city/views/city.html
+++ b/public/modules/city/views/city.html
@@ -1,3 +1,5 @@
+
+<div id="container" style="width:500px; margin-left:500px;>Placeholder for chart</div>
 <div style="min-height: 276px;" class="content-wrapper ng-scope" ng-init="initGMap()">
     <section class="content-header">
         <h1>City sanitation plan<small>Area division and navigation plan</small></h1>
