--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,6 +59,7 @@
 	
 	<script src="/javascripts/js/ng-map.min.js" type="text/javascript"></script>
 	<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCNZNdJlTb16L5qMi1WJWSWbPvUMeDlSIE&libraries=placeses,visualization,drawing,geometry,places"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<!--<script src="/javascripts/js/autocomplete.js"></script>-->
 	<!--<script src="/javascripts/js/angucomplete-alt.js"></script>-->
 	<script src="/directives/google.js" type="text/javascript"></script>
@@ -74,10 +75,10 @@
 	<script src="/modules/garbageCollection/controller.js" type="text/javascript"></script>
 
 	<script src="/modules/user/controller.js" type="text/javascript"></script>
-	<!--services-->
-	<!--<script src="/modules/city/service.js" type="text/javascript"></script>-->
 
-</head>
+
+
+
 
 <body class="skin-blue fixed sidebar-mini" ng-controller="mainController">
 	<span us-spinner spinner-key="spinner-1"></span>
