Report garbage location module

--- a/public/modules/sidebar/views/sidebar.html
+++ b/public/modules/sidebar/views/sidebar.html
@@ -34,6 +34,21 @@
             <i class="fa fa-dashboard"></i> <span>Add Vehicles</span>
           </a>
         </li>
+        <li >
+          <a ui-sref="vehiclestat">
+            <i class="fa fa-dashboard"></i> <span>Add Vehicle Stats</span>
+          </a>
+        </li>
+        <li >
+          <a ui-sref="reportgarbage">
+            <i class="fa fa-dashboard"></i> <span>Report Garbage</span>
+          </a>
+        </li>
+        <li >
+          <a ui-sref="listreportedgarbage">
+            <i class="fa fa-dashboard"></i> <span>User Reported Location</span>
+          </a>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
