--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 	<link rel="stylesheet" href="/stylesheets/ng-table.css">
 	<link rel="stylesheet" href="/stylesheets/custom.css">
 	<link rel="stylesheet" href="/font/font-awesome.css">
-	<link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+	<link rel="stylesheet" href="/stylesheets/toaster.min.css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -54,6 +54,8 @@
 	<script src="/javascripts/js/jquery-2.2.3.min.js" type="text/javascript"></script>
 	<script src="/javascripts/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="/javascripts/js/ng-table.min.js"></script>
+<script src="/javascripts/js/angular-animate.min.js" ></script>
+<script src="/javascripts/js/toaster.min.js"></script>
 	<script src="/app.js" type="text/javascript"></script>
 	<!--<script src="/javascripts/constants.js" type="text/javascript"></script>-->
 	
@@ -76,11 +78,15 @@
 
 	<script src="/modules/user/controller.js" type="text/javascript"></script>
 
+	<script src="/modules/vehicleStat/controller.js" type="text/javascript"></script>
+	<script src="/modules/reportgarbage/controller.js" type="text/javascript"></script>
+
 
 
 
 
 <body class="skin-blue fixed sidebar-mini" ng-controller="mainController">
+	<toaster-container></toaster-container>
 	<span us-spinner spinner-key="spinner-1"></span>
 	<div class="wrapper">
 		<div ui-view="header" ng-cloak></div>
