--- a/public/modules/city/views/city.html
+++ b/public/modules/city/views/city.html
@@ -24,14 +24,14 @@
                                 ng-repeat="dump in $root.city.dumpYards"
                                 position="{{dump.lat}}, {{dump.long}}">
                                   <!--<img width="64" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/President_Barack_Obama%2C_2012_portrait_crop.jpg/140px-President_Barack_Obama%2C_2012_portrait_crop.jpg" align="left" /> Hi, How Are You? <br/>-->
-                                  <img src="/img/dump.png">
+                                  <img src="/img/pollution-003-64.png" height="20px" title="{{dump.name}}" style="cursor: pointer;">
                             </custom-marker>
                             <custom-marker
                                 id="custom-marker1-{{$index}}"
                                 ng-repeat="gc in $root.city.collectionCenters"
                                 position="{{gc.lat}}, {{gc.long}}">
                                   <!--<img width="64" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/President_Barack_Obama%2C_2012_portrait_crop.jpg/140px-President_Barack_Obama%2C_2012_portrait_crop.jpg" align="left" /> Hi, How Are You? <br/>-->
-                                  <img src="/img/pollution-003-64.png">
+                                  <img src="/img/dump.png" height="15px" title="{{gc.name}}" style="cursor: pointer;">
                             </custom-marker>
                        </ng-map>
                      </div>
