--- a/public/modules/dashboard/views/dashboard.html
+++ b/public/modules/dashboard/views/dashboard.html
@@ -1,7 +1,12 @@
 <div style="min-height: 276px;" class="content-wrapper ng-scope" >
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div id="container">Placeholder for chart</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="container2">Placeholder for chart</div>
         </div>
     </div>
     
