--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,6 +80,7 @@
 
 	<script src="/modules/vehicleStat/controller.js" type="text/javascript"></script>
 	<script src="/modules/reportgarbage/controller.js" type="text/javascript"></script>
+	<script src="/modules/routes/controller.js" type="text/javascript"></script>
 
 
 
