--- a/public/modules/dashboard/views/dashboard.html
+++ b/public/modules/dashboard/views/dashboard.html
@@ -1,4 +1,52 @@
 <div style="min-height: 276px;" class="content-wrapper ng-scope" >
+    <div class="row" style="padding:20px;">
+        
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-red"><i class="fa fa-plus"></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Total Garbage collection points</span>
+              <span class="info-box-number">{{$root.city.collectionCenters.length}}</span>
+            </div>
+            <!-- /.info-box-content -->
+          </div>
+          <!-- /.info-box -->
+        </div>
+        <!-- /.col -->
+        
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-red"><i class="fa fa-plus"></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Garbage Capacity</span>
+              <span class="info-box-number">{{allVCount.totalCapacity}}</span>
+            </div>
+            <!-- /.info-box-content -->
+          </div>
+          <!-- /.info-box -->
+        </div>
+        <!-- /.col -->
+
+        <!-- fix for small devices only -->
+        <div class="clearfix visible-sm-block"></div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-green"><i class="fa fa-truck"></i></span>
+
+            <div class="info-box-content">
+              <span class="info-box-text">Total Vehicles availble</span>
+              <span class="info-box-number">{{allVCount.count}}</span>
+            </div>
+            <!-- /.info-box-content -->
+          </div>
+          <!-- /.info-box -->
+        </div>
+        <!-- /.col -->
+        
+      </div>
     <div class="row">
         <div class="col-md-12">
             <div id="container">Placeholder for chart</div>
