--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,9 @@
 		.ng-hide {
 			display: none !important;
 		}
+		ng-map{
+			height: 500px;
+		}
 	</style>
 	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" href="/stylesheets/_all-skins.min.css">
@@ -77,9 +80,11 @@
 	<script src="/modules/garbageCollection/controller.js" type="text/javascript"></script>
 	<script src="/modules/dashboard/controller.js" type="text/javascript"></script>
 	<script src="/modules/user/controller.js" type="text/javascript"></script>
+	<script src="/modules/hiring/controller.js" type="text/javascript"></script>
 
 	<script src="/modules/vehicleStat/controller.js" type="text/javascript"></script>
 	<script src="/modules/reportgarbage/controller.js" type="text/javascript"></script>
+	<script src="/modules/garbageCollectionStat/controller.js" type="text/javascript"></script>
 	<script src="/modules/routes/controller.js" type="text/javascript"></script>
 
 
