--- a/public/modules/sidebar/views/sidebar.html
+++ b/public/modules/sidebar/views/sidebar.html
@@ -25,6 +25,11 @@
             <i class="fa fa-dashboard"></i> <span>Dump Yard</span>
           </a>
         </li>
+         <li ng-class="{'active':isActiveState('addvehicle')}" >
+          <a ui-sref="addvehicle">
+            <i class="fa fa-truck"></i> <span>Vehicles</span>
+          </a>
+        </li>
         <li ng-class="{'active':isActiveState('addGC')}" >
           <a href="#/addGC">
             <i class="fa fa-dashboard"></i> <span>Garbage Collection Point</span>
@@ -35,9 +40,9 @@
             <i class="fa fa-users"></i> <span>Users</span>
           </a>
         </li>
-         <li ng-class="{'active':isActiveState('addvehicle')}" >
-          <a ui-sref="addvehicle">
-            <i class="fa fa-truck"></i> <span>Vehicles</span>
+        <li ng-class="{'active':isActiveState('hiring')}" >
+          <a ui-sref="hiring">
+            <i class="fa fa-trash"></i> <span>Manpower Hiring</span>
           </a>
         </li>
         <li ng-class="{'active':isActiveState('vehiclestat')}" >
@@ -58,6 +63,11 @@
         <li ng-class="{'active':isActiveState('vehicleroutes')}" >
           <a ui-sref="vehicleroutes">
             <i class="fa fa-dashboard"></i> <span>Vehicle Routes</span>
+          </a>
+        </li>
+        <li ng-class="{'active':isActiveState('vehicleroutes')}" >
+          <a ui-sref="cpStats">
+            <i class="fa fa-trash"></i> <span>Collection Point Stats</span>
           </a>
         </li>
       </ul>
