final push sahil

--- a/public/modules/sidebar/views/sidebar.html
+++ b/public/modules/sidebar/views/sidebar.html
@@ -65,7 +65,7 @@
             <i class="fa fa-dashboard"></i> <span>Vehicle Routes</span>
           </a>
         </li>
-        <li ng-class="{'active':isActiveState('vehicleroutes')}" >
+        <li ng-class="{'active':isActiveState('cpStats')}" >
           <a ui-sref="cpStats">
             <i class="fa fa-trash"></i> <span>Collection Point Stats</span>
           </a>
