--- a/public/modules/dumpYard/views/dumpYard.html
+++ b/public/modules/dumpYard/views/dumpYard.html
@@ -10,6 +10,7 @@
         <div class="box">
             <div class="content clearfix">
                 <div>
+                    <div class="row"  style="padding-right: 10px;"><span class="pull-right"><img src="/img/pollution-003-64.png" height="20px" title="{{dump.name}}">Saved Dumping Grounds</span></div>
                     <div class="row" style="padding:10px;">
                         Enter a Location to add a new dumping yard and click save button after adjusting the location of markerr: <br/>
                         <input places-auto-complete size=80
