--- a/public/modules/city/views/city.html
+++ b/public/modules/city/views/city.html
@@ -12,11 +12,15 @@
         <div class="box">
             <div class="content clearfix">
                 <div>
+                    
                     <div class="row" style="padding:10px">
                        <h1> Sanitation Plan of {{$root.city.name}}</h1>
                        
                     </div>
-                    
+                    <div class="row"  style="padding-right: 10px;padding-bottom: 10px;"><span class="pull-right">
+                        <img src="/img/dump.png" height="20px" title="{{gc.name}}">Saved Dumpsters
+                        <img src="/img/pollution-003-64.png" height="20px" title="{{dump.name}}">Saved Dumping Grounds</span>
+                    </div>
                      <div class="row">
                        <ng-map center="{{pinlat}}, {{pinlng}}" zoom="13">
                             <custom-marker
