--- a/public/modules/garbageCollection/views/garbageCollection.html
+++ b/public/modules/garbageCollection/views/garbageCollection.html
@@ -10,6 +10,9 @@
         <div class="box">
             <div class="content clearfix">
                 <div>
+                    <div class="row"  style="padding-right: 10px;padding-bottom: 10px;"><span class="pull-right">
+                        <img src="/img/dump.png" height="20px" title="{{gc.name}}">Saved Dumpsters
+                    </div>
                     <div class="row" style="padding:10px;">
                         Enter a Location to add a new garbage collection point and click save button after adjusting the location of markerr: <br/>
                         <input places-auto-complete size=80
